2008-06-12  Daniel Steffen  <das@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c:	fix warning.

	* unix/tcl.m4 (SunOS-5.11): fix 64bit amd64 support with gcc & Sun cc.
	* unix/configure: autoconf-2.59

	* macosx/tkMacOSXXStubs.c (Tk_ResetUserInactiveTime): use UsrActivity
	instead of OverallAct (which may be ignored in some circumstances).

	* macosx/Wish.xcodeproj/project.pbxproj: add tclIORTrans.c; add tclOO
	* macosx/Wish.xcodeproj/default.pbxuser: files to tktest-X11 target;
	add debug configs for 64bit and with corefoundation disabled; updates
	and cleanup for Xcode 3.1 and for Leopard; sync with Tcl.xcodeproj.
	* macosx/Wish.xcode/project.pbxproj:	sync Wish.xcodeproj changes.
	* macosx/Wish.xcode/default.pbxuser:
	* macosx/README:			document new build configs.

2008-06-10  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixKey.c: tkUnixKey.c: Use Xutf8LookupString if available
	[Patch #1986818].  This should fix problems (like #1908443) where
	Xlib's idea of the system encoding does not match Tcl's.

2008-06-01  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.xcodeproj/project.pbxproj: add new tclOO files; add debug
	* macosx/README:			configs with gcov; update to
						Xcode 3.1.

2008-05-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/ttk/ttkTheme.c: [ttk::style theme use] without
	* doc/ttk_style.n: an argument now returns the current theme

2008-05-23  Joe English  <jenglish@users.sourceforge.net>

	* doc/ttk_treeview.n, generic/ttk/ttkTreeview.c,
	generic/ttk/ttkTagSet.c, generic/ttk/ttkLayout.c,
	generic/ttk/ttkTheme.c, generic/ttk/ttkTheme.h,
	generic/ttk/ttkThemeInt.h, generic/ttk/ttkWidget.h:
	
	Added [$tv identify region], [$tv identify element],
	and [$tv identify item] subcommands.  Simplified
	bindings.  Added [$tv tag has] subcommand.  Tag-related
	display improvements; setting a tag -background or -foreground
	no longer overrides selection feedback.

