@@ -309,14 +309,12 @@ Tk_UpdatePointer(
 
 		/*
 		 * ButtonRelease - Release the mouse capture and clear the
-		 * restrict window when the last button is released and we
-		 * aren't in a global grab.
+		 * restrict window when the last button is released. If we
+		 * are in a global grab, restore the grab window capture.
 		 */
 
 		if ((tsdPtr->lastState & ALL_BUTTONS) == mask) {
-		    if (!tsdPtr->grabWinPtr) {
-			TkpSetCapture(NULL);
-		    }
+		    TkpSetCapture(tsdPtr->grabWinPtr);
 		}
 
 		/*
